bk_ida/gccida/g1/addr_side_effect_eval
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/addr_side_effect_eval/src/alias.c:1964:32: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_ee( PLUS, ( machine_mode)*( ( unsigned __int8 *)addr + 2), addr->fld[0].rtx, v6); 
                               ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/addr_side_effect_eval/src/obj/alias.o] Error 1
